# 2025_Engineer_Ctrl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Hardware/: custom_ctrl_20250401.epro
main/: BT_task.c  BT_task.h  CMakeLists.txt  Kconfig.projbuild  crc.h  idf_component.yml  main.c  main.cpp  uart_task.c  uart_task.h
main/algorithm/: crc.c  crc.h  kalman.c  kalman.h
main/app/: Mpu6050.cpp  Mpu6050.h  Oled.cpp  Oled.h  Sensor.cpp  Sensor.h  Uart.c  Uart.h  bluetooch.c  bluetooch.h  nvs.cpp  nvs.h
main/hal/: soft_iic.c
main/hdl/: as5600.cpp  as5600.h  button.c  button.h  buzzer.cpp  buzzer.h  mt6701.h  mt6701_pwm.cpp  mt6701_pwm.h  soft_iic_as5600.h  soft_iic_mt6701.cpp  soft_iic_mt6701.h
main/hdl/button/: button.c  button.h
main/hdl/buzzer/: buzzer.cpp
main/hdl/sensor/: as5600.cpp  as5600.h  mt6701.cpp  mt6701_pwm.cpp  sensor.h  soft_iic_as5600.cpp  soft_iic_as5600.h  soft_iic_mt6701.cpp  soft_iic_mt6701.h
main/ui/MiaoUI/: ui_conf.c  ui_conf.h  version.h
main/ui/MiaoUI/core/: ui.c  ui.h
main/ui/MiaoUI/display/: dispDriver.c  dispDriver.h
main/ui/MiaoUI/images/: LOGO.xcf  bmp2bin.py  image.c
main/ui/MiaoUI/indev/: indevDriver.c  indevDriver.h
main/ui/MiaoUI/widgets/: custom.c  custom.h  parameter.c  parameter.h  text.c  text.h  wave.c  wave.h
main/ui/sim_SDL3/: CMakeLists.txt  Makefile  sim.c
main/ui/sim_SDL3/lib/MiaoUI/: LICENSE  ui_conf.c  ui_conf.h  version.h
main/ui/sim_SDL3/lib/MiaoUI/core/: ui.c  ui.h
main/ui/sim_SDL3/lib/MiaoUI/display/: dispDriver.c  dispDriver.h
main/ui/sim_SDL3/lib/MiaoUI/fonts/: fonts.c  fonts.h
main/ui/sim_SDL3/lib/MiaoUI/images/: image.c
main/ui/sim_SDL3/lib/MiaoUI/indev/: indevDriver.c  indevDriver.h
main/ui/sim_SDL3/lib/MiaoUI/widget/: custom.c  custom.h  parameter.c  parameter.h  text.c  text.h  wave.c  wave.h
main/ui/sim_SDL3/lib/u8g2/: u8g2_d_memory.c  u8g2_d_setup.c
